--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+<!-- login.html -->
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Login</title>
+    <title>Login Page</title>
 </head>
 <body>
-    <form method="POST" action="login.php">
+    <h2>Login Page</h2>
+    <form action="login.php" method="POST">
         Username: <input type="text" name="username" required><br>
         Password: <input type="password" name="password" required><br>
         <input type="submit" value="Login">
