--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- login.html -->
+<!-- index.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,10 +6,12 @@
 </head>
 <body>
     <h2>Login Page</h2>
-    <form action="login.php" method="POST">
-        Username: <input type="text" name="username" required><br>
-        Password: <input type="password" name="password" required><br>
-        <input type="submit" value="Login">
+    <form id="loginForm">
+        Username: <input type="text" id="username" required><br>
+        Password: <input type="password" id="password" required><br>
+        <input type="button" value="Login" onclick="submitForm()">
     </form>
+
+    <script src="script.js"></script>
 </body>
 </html>
